syntax = "proto3";

package com.road.yishi.proto.farm;

message FriendTreeReq {
  repeated int32 friendId = 1;
}
